--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -42,17 +42,22 @@
             <nav class="header__container-nav">
                 <div class="header__container-nav__social">
                     <a class="header__container-nav__social-icon" href="http://t.me/p2pcloud" target="_blank">
-                        <svg width="22" height="18" viewBox="0 0 22 18" fill="#ffffff" xmlns="http://www.w3.org/2000/svg">
+                        <svg width="22" height="18" viewBox="0 0 22 18" fill="#ffffff"
+                            xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" clip-rule="evenodd"
                                 d="M18.0284 17.5858L21.6075 0.77974C21.6838 0.403928 21.3146 0.09499 20.9614 0.233918L1.20419 7.7657C0.803653 7.92017 0.799415 8.53757 1.18629 8.71417L6.24633 10.7924L8.13199 16.7338C8.24407 17.056 8.64437 17.1586 8.90151 16.9415L11.7964 14.2463L17.2993 17.899C17.5876 18.0779 17.9615 17.915 18.0284 17.5858ZM9.06212 11.915L8.74235 14.9686L7.21226 10.2686L17.9855 3.19318L9.06212 11.915Z" />
                         </svg>
                     </a>
-                    <a class="header__container-nav__social-icon" href="https://github.com/p2pcloud/website" target="_blank">
+                    <a class="header__container-nav__social-icon" href="https://github.com/p2pcloud/website"
+                        target="_blank">
                         <svg width="22" height="18" viewBox="0 2 22 20" fill="white" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M12,2.2467A10.00042,10.00042,0,0,0,8.83752,21.73419c.5.08752.6875-.21247.6875-.475,0-.23749-.01251-1.025-.01251-1.86249C7,19.85919,6.35,18.78423,6.15,18.22173A3.636,3.636,0,0,0,5.125,16.8092c-.35-.1875-.85-.65-.01251-.66248A2.00117,2.00117,0,0,1,6.65,17.17169a2.13742,2.13742,0,0,0,2.91248.825A2.10376,2.10376,0,0,1,10.2,16.65923c-2.225-.25-4.55-1.11254-4.55-4.9375a3.89187,3.89187,0,0,1,1.025-2.6875,3.59373,3.59373,0,0,1,.1-2.65s.83747-.26251,2.75,1.025a9.42747,9.42747,0,0,1,5,0c1.91248-1.3,2.75-1.025,2.75-1.025a3.59323,3.59323,0,0,1,.1,2.65,3.869,3.869,0,0,1,1.025,2.6875c0,3.83747-2.33752,4.6875-4.5625,4.9375a2.36814,2.36814,0,0,1,.675,1.85c0,1.33752-.01251,2.41248-.01251,2.75,0,.26251.1875.575.6875.475A10.0053,10.0053,0,0,0,12,2.2467Z"></path>
+                            <path
+                                d="M12,2.2467A10.00042,10.00042,0,0,0,8.83752,21.73419c.5.08752.6875-.21247.6875-.475,0-.23749-.01251-1.025-.01251-1.86249C7,19.85919,6.35,18.78423,6.15,18.22173A3.636,3.636,0,0,0,5.125,16.8092c-.35-.1875-.85-.65-.01251-.66248A2.00117,2.00117,0,0,1,6.65,17.17169a2.13742,2.13742,0,0,0,2.91248.825A2.10376,2.10376,0,0,1,10.2,16.65923c-2.225-.25-4.55-1.11254-4.55-4.9375a3.89187,3.89187,0,0,1,1.025-2.6875,3.59373,3.59373,0,0,1,.1-2.65s.83747-.26251,2.75,1.025a9.42747,9.42747,0,0,1,5,0c1.91248-1.3,2.75-1.025,2.75-1.025a3.59323,3.59323,0,0,1,.1,2.65,3.869,3.869,0,0,1,1.025,2.6875c0,3.83747-2.33752,4.6875-4.5625,4.9375a2.36814,2.36814,0,0,1,.675,1.85c0,1.33752-.01251,2.41248-.01251,2.75,0,.26251.1875.575.6875.475A10.0053,10.0053,0,0,0,12,2.2467Z">
+                            </path>
                         </svg>
                     </a>
-                    <a class="header__container-nav__social-icon" href="https://twitter.com/p2pcloud_io" target="_blank">
+                    <a class="header__container-nav__social-icon" href="https://twitter.com/p2pcloud_io"
+                        target="_blank">
                         <svg width="22" height="18" viewBox="0 0 22 18" fill="white" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M21.6601 2.38998C20.8901 2.71998 20.0101 2.93999 19.1301 3.04999C20.0101 2.49999 20.7801 1.61999 21.1101 0.629991C20.2301 1.17999 19.3501 1.50999 18.2501 1.72999C17.4801 0.849991 16.2701 0.299988 15.0601 0.299988C12.6401 0.299988 10.6601 2.27999 10.6601 4.69999C10.6601 5.02999 10.6601 5.35998 10.7701 5.68998C7.14009 5.46998 3.84009 3.70998 1.64009 1.06998C1.31009 1.72998 1.09009 2.49998 1.09009 3.26998C1.09009 4.80998 1.86009 6.12999 3.07009 6.89999C2.30009 6.89999 1.64009 6.67999 1.09009 6.34999C1.09009 8.43999 2.63009 10.31 4.61009 10.64C4.28009 10.75 3.8401 10.75 3.4001 10.75C3.0701 10.75 2.85009 10.75 2.52009 10.64C3.07009 12.4 4.7201 13.72 6.7001 13.72C5.1601 14.93 3.2901 15.59 1.2001 15.59C0.870098 15.59 0.540098 15.59 0.100098 15.48C2.0801 16.69 4.39009 17.46 6.92009 17.46C15.0601 17.46 19.4601 10.75 19.4601 4.91998V4.36998C20.3401 4.03998 21.1101 3.26998 21.6601 2.38998Z" />
@@ -72,10 +77,12 @@
                     {{ if "/docs" | strings.HasPrefix .RelPermalink }}
                     {{ $activeClass = "active" }}
                     {{ end }}<li class="header__container-nav__list-item  {{$activeClass}}">
-                        <a class="header__container-nav__list-item__link" href="/docs/developer-hub/developer-quick-start/">Docs</a>
+                        <a class="header__container-nav__list-item__link"
+                            href="/docs/developer-hub/developer-quick-start/">Docs</a>
                     </li>
                     <li class="header__container-nav__list-item">
-                        <a class="header__container-nav__list-item__link" href="https://calendly.com/p2pcloud/private-chat" target="_blank">Let's Chat</a>
+                        <a class="header__container-nav__list-item__link"
+                            href="https://calendly.com/p2pcloud/private-chat" target="_blank">Let's Chat</a>
                     </li>
                 </ul>
                 <div class="header__container-nav__btn">
@@ -93,9 +100,12 @@
                     <button class="close"></button>
                     <ul class="menu__nav-list">
                         <li class="menu__nav-list-item"><a class="menu__nav-list-item__link" href="/">Main</a></li>
-                        <li class="menu__nav-list-item"><a class="menu__nav-list-item__link" href="/docs/developer-hub/developer-quick-start/">Docs</a></li>
-                        <li class="menu__nav-list-item"><a class="menu__nav-list-item__link" href="https://github.com/p2pcloud/website" target="_blank">Github</a></li>
-                        <li class="menu__nav-list-item"><a class="menu__nav-list-item__link" href="https://calendly.com/p2pcloud/private-chat" target="_blank">Let's meet</a></li>
+                        <li class="menu__nav-list-item"><a class="menu__nav-list-item__link"
+                                href="/docs/developer-hub/developer-quick-start/">Docs</a></li>
+                        <li class="menu__nav-list-item"><a class="menu__nav-list-item__link"
+                                href="https://github.com/p2pcloud/website" target="_blank">Github</a></li>
+                        <li class="menu__nav-list-item"><a class="menu__nav-list-item__link"
+                                href="https://calendly.com/p2pcloud/private-chat" target="_blank">Let's meet</a></li>
 
                     </ul>
 
@@ -118,13 +128,15 @@
 
                     <div class="menu__nav-social">
                         <a class="header__container-nav__social-icon" href="https://t.me/p2pcloud">
-                            <svg width="22" height="18" viewBox="0 0 22 18" fill="#ffffff" xmlns="http://www.w3.org/2000/svg">
+                            <svg width="22" height="18" viewBox="0 0 22 18" fill="#ffffff"
+                                xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd"
                                     d="M18.0284 17.5858L21.6075 0.77974C21.6838 0.403928 21.3146 0.09499 20.9614 0.233918L1.20419 7.7657C0.803653 7.92017 0.799415 8.53757 1.18629 8.71417L6.24633 10.7924L8.13199 16.7338C8.24407 17.056 8.64437 17.1586 8.90151 16.9415L11.7964 14.2463L17.2993 17.899C17.5876 18.0779 17.9615 17.915 18.0284 17.5858ZM9.06212 11.915L8.74235 14.9686L7.21226 10.2686L17.9855 3.19318L9.06212 11.915Z" />
                             </svg>
                         </a>
                         <a class="header__container-nav__social-icon" href="https://twitter.com/p2pcloud_io">
-                            <svg width="22" height="18" viewBox="0 0 22 18" fill="white" xmlns="http://www.w3.org/2000/svg">
+                            <svg width="22" height="18" viewBox="0 0 22 18" fill="white"
+                                xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="M21.6601 2.38998C20.8901 2.71998 20.0101 2.93999 19.1301 3.04999C20.0101 2.49999 20.7801 1.61999 21.1101 0.629991C20.2301 1.17999 19.3501 1.50999 18.2501 1.72999C17.4801 0.849991 16.2701 0.299988 15.0601 0.299988C12.6401 0.299988 10.6601 2.27999 10.6601 4.69999C10.6601 5.02999 10.6601 5.35998 10.7701 5.68998C7.14009 5.46998 3.84009 3.70998 1.64009 1.06998C1.31009 1.72998 1.09009 2.49998 1.09009 3.26998C1.09009 4.80998 1.86009 6.12999 3.07009 6.89999C2.30009 6.89999 1.64009 6.67999 1.09009 6.34999C1.09009 8.43999 2.63009 10.31 4.61009 10.64C4.28009 10.75 3.8401 10.75 3.4001 10.75C3.0701 10.75 2.85009 10.75 2.52009 10.64C3.07009 12.4 4.7201 13.72 6.7001 13.72C5.1601 14.93 3.2901 15.59 1.2001 15.59C0.870098 15.59 0.540098 15.59 0.100098 15.48C2.0801 16.69 4.39009 17.46 6.92009 17.46C15.0601 17.46 19.4601 10.75 19.4601 4.91998V4.36998C20.3401 4.03998 21.1101 3.26998 21.6601 2.38998Z" />
                             </svg>
@@ -160,15 +172,20 @@
                 </nav>
                 <div class="footer__content-menu">
                     <ul class="footer__content-menu__list">
-                        <li class="footer__content-menu__list-item"><a class="footer__content-menu__list-item__link" href="/">Main</a></li>
-                        <li class="footer__content-menu__list-item"><a class="footer__content-menu__list-item__link" href="/docs/developer-hub/developer-quick-start/">Docs</a></li>                        <li class="footer__content-menu__list-item"><a class="footer__content-menu__list-item__link" href="https://calendly.com/p2pcloud/private-chat"
-                                target="_blank">Let's&nbsp;Chat</a>
+                        <li class="footer__content-menu__list-item"><a class="footer__content-menu__list-item__link"
+                                href="/">Main</a></li>
+                        <li class="footer__content-menu__list-item"><a class="footer__content-menu__list-item__link"
+                                href="/docs/developer-hub/developer-quick-start/">Docs</a></li>
+                        <li class="footer__content-menu__list-item"><a class="footer__content-menu__list-item__link"
+                                href="https://calendly.com/p2pcloud/private-chat" target="_blank">Let's&nbsp;Chat</a>
                         </li>
-                        <li class="footer__content-menu__list-item"><a class="footer__content-menu__list-item__link" href="/panel.html">App</a></li>
+                        <li class="footer__content-menu__list-item"><a class="footer__content-menu__list-item__link"
+                                href="/panel.html">App</a></li>
                     </ul>
                     <div class="footer__content-menu__social">
                         <a href="http://t.me/p2pcloud" target="_blank">
-                            <svg width="22" height="18" viewBox="0 0 22 18" fill="#ffffff" xmlns="http://www.w3.org/2000/svg">
+                            <svg width="22" height="18" viewBox="0 0 22 18" fill="#ffffff"
+                                xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd"
                                     d="M18.0284 17.5858L21.6075 0.77974C21.6838 0.403928 21.3146 0.09499 20.9614 0.233918L1.20419 7.7657C0.803653 7.92017 0.799415 8.53757 1.18629 8.71417L6.24633 10.7924L8.13199 16.7338C8.24407 17.056 8.64437 17.1586 8.90151 16.9415L11.7964 14.2463L17.2993 17.899C17.5876 18.0779 17.9615 17.915 18.0284 17.5858ZM9.06212 11.915L8.74235 14.9686L7.21226 10.2686L17.9855 3.19318L9.06212 11.915Z">
                                 </path>
@@ -176,17 +193,22 @@
                         </a>
                         <a href="https://twitter.com/p2pcloud_io" target="_blank">
 
-                            <svg width="22" height="18" viewBox="0 0 22 18" fill="white" xmlns="http://www.w3.org/2000/svg">
+                            <svg width="22" height="18" viewBox="0 0 22 18" fill="white"
+                                xmlns="http://www.w3.org/2000/svg">
                                 <path
                                     d="M21.6601 2.38998C20.8901 2.71998 20.0101 2.93999 19.1301 3.04999C20.0101 2.49999 20.7801 1.61999 21.1101 0.629991C20.2301 1.17999 19.3501 1.50999 18.2501 1.72999C17.4801 0.849991 16.2701 0.299988 15.0601 0.299988C12.6401 0.299988 10.6601 2.27999 10.6601 4.69999C10.6601 5.02999 10.6601 5.35998 10.7701 5.68998C7.14009 5.46998 3.84009 3.70998 1.64009 1.06998C1.31009 1.72998 1.09009 2.49998 1.09009 3.26998C1.09009 4.80998 1.86009 6.12999 3.07009 6.89999C2.30009 6.89999 1.64009 6.67999 1.09009 6.34999C1.09009 8.43999 2.63009 10.31 4.61009 10.64C4.28009 10.75 3.8401 10.75 3.4001 10.75C3.0701 10.75 2.85009 10.75 2.52009 10.64C3.07009 12.4 4.7201 13.72 6.7001 13.72C5.1601 14.93 3.2901 15.59 1.2001 15.59C0.870098 15.59 0.540098 15.59 0.100098 15.48C2.0801 16.69 4.39009 17.46 6.92009 17.46C15.0601 17.46 19.4601 10.75 19.4601 4.91998V4.36998C20.3401 4.03998 21.1101 3.26998 21.6601 2.38998Z">
                                 </path>
                             </svg>
                         </a>
-                        <a class="header__container-nav__social-icon" href="https://github.com/p2pcloud/website" target="_blank">
-                            <svg width="22" height="18" viewBox="0 2 22 20" fill="white" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M12,2.2467A10.00042,10.00042,0,0,0,8.83752,21.73419c.5.08752.6875-.21247.6875-.475,0-.23749-.01251-1.025-.01251-1.86249C7,19.85919,6.35,18.78423,6.15,18.22173A3.636,3.636,0,0,0,5.125,16.8092c-.35-.1875-.85-.65-.01251-.66248A2.00117,2.00117,0,0,1,6.65,17.17169a2.13742,2.13742,0,0,0,2.91248.825A2.10376,2.10376,0,0,1,10.2,16.65923c-2.225-.25-4.55-1.11254-4.55-4.9375a3.89187,3.89187,0,0,1,1.025-2.6875,3.59373,3.59373,0,0,1,.1-2.65s.83747-.26251,2.75,1.025a9.42747,9.42747,0,0,1,5,0c1.91248-1.3,2.75-1.025,2.75-1.025a3.59323,3.59323,0,0,1,.1,2.65,3.869,3.869,0,0,1,1.025,2.6875c0,3.83747-2.33752,4.6875-4.5625,4.9375a2.36814,2.36814,0,0,1,.675,1.85c0,1.33752-.01251,2.41248-.01251,2.75,0,.26251.1875.575.6875.475A10.0053,10.0053,0,0,0,12,2.2467Z"></path>
+                        <a class="header__container-nav__social-icon" href="https://github.com/p2pcloud/website"
+                            target="_blank">
+                            <svg width="22" height="18" viewBox="0 2 22 20" fill="white"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M12,2.2467A10.00042,10.00042,0,0,0,8.83752,21.73419c.5.08752.6875-.21247.6875-.475,0-.23749-.01251-1.025-.01251-1.86249C7,19.85919,6.35,18.78423,6.15,18.22173A3.636,3.636,0,0,0,5.125,16.8092c-.35-.1875-.85-.65-.01251-.66248A2.00117,2.00117,0,0,1,6.65,17.17169a2.13742,2.13742,0,0,0,2.91248.825A2.10376,2.10376,0,0,1,10.2,16.65923c-2.225-.25-4.55-1.11254-4.55-4.9375a3.89187,3.89187,0,0,1,1.025-2.6875,3.59373,3.59373,0,0,1,.1-2.65s.83747-.26251,2.75,1.025a9.42747,9.42747,0,0,1,5,0c1.91248-1.3,2.75-1.025,2.75-1.025a3.59323,3.59323,0,0,1,.1,2.65,3.869,3.869,0,0,1,1.025,2.6875c0,3.83747-2.33752,4.6875-4.5625,4.9375a2.36814,2.36814,0,0,1,.675,1.85c0,1.33752-.01251,2.41248-.01251,2.75,0,.26251.1875.575.6875.475A10.0053,10.0053,0,0,0,12,2.2467Z">
+                                </path>
                             </svg>
-                        </a> 
+                        </a>
 
                     </div>
                 </div>
@@ -196,7 +218,8 @@
                 <ul class="footer__copy-list">
                     <!-- <li class="footer__copy-list__item"><a class="footer__copy-list__item-link" href="/#">Privacy Policy</a></li>
                     <li class="footer__copy-list__item"><a class="footer__copy-list__item-link" href="/#">Cookie Statement</a></li> -->
-                    <li class="footer__copy-list__item"><a class="footer__copy-list__item-link" href="/legal/terms/">Terms &amp; Conditions</a></li>
+                    <li class="footer__copy-list__item"><a class="footer__copy-list__item-link"
+                            href="/legal/terms/">Terms of service</a></li>
                 </ul>
             </div>
         </div>
