removed link to marketplace

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -85,8 +85,10 @@
                             href="https://calendly.com/p2pcloud/private-chat" target="_blank">Let's Chat</a>
                     </li>
                 </ul>
-                <div class="header__container-nav__btn">
-                    <a class="header__container-nav__btn-button" href="/panel.html">App</a>
+                <div class="header__container-nav__btn" >
+                    <a class="header__container-nav__btn-button">
+                        Coming Soon
+                    </a>
                 </div>
             </nav>
             <div class="header__container-menu">
@@ -94,21 +96,6 @@
             </div>
             <div class="menu">
                 <nav class="menu__nav">
-                    <div class="header__container-nav__btn">
-                        <a class="header__container-nav__btn-button" href="/panel.html">App</a>
-                    </div>
-                    <button class="close"></button>
-                    <ul class="menu__nav-list">
-                        <li class="menu__nav-list-item"><a class="menu__nav-list-item__link" href="/">Main</a></li>
-                        <li class="menu__nav-list-item"><a class="menu__nav-list-item__link"
-                                href="/docs/developer-hub/developer-quick-start/">Docs</a></li>
-                        <li class="menu__nav-list-item"><a class="menu__nav-list-item__link"
-                                href="https://github.com/p2pcloud/website" target="_blank">Github</a></li>
-                        <li class="menu__nav-list-item"><a class="menu__nav-list-item__link"
-                                href="https://calendly.com/p2pcloud/private-chat" target="_blank">Let's meet</a></li>
-
-                    </ul>
-
                     {{ range .Site.Sections }}
                     {{ if eq .RelPermalink "/docs/" }}
                     {{ range .Pages }}
@@ -180,7 +167,7 @@
                                 href="https://calendly.com/p2pcloud/private-chat" target="_blank">Let's&nbsp;Chat</a>
                         </li>
                         <li class="footer__content-menu__list-item"><a class="footer__content-menu__list-item__link"
-                                href="/panel.html">App</a></li>
+                                href="/panel.html">App</a></li>           
                     </ul>
                     <div class="footer__content-menu__social">
                         <a href="http://t.me/p2pcloud" target="_blank">
