--- a/layouts/index.html
+++ b/layouts/index.html
@@ -143,7 +143,11 @@
     </section>
 </main>
 <style>
-
+    .header__container-nav__btn-button {
+    pointer-events: none;
+    text-align: center;
+    font-size: small;
+}
 
     .btn-gradient:after {
         display: none;
