updated docs and screenshots for launch

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -85,10 +85,8 @@
                             href="https://calendly.com/p2pcloud/private-chat" target="_blank">Let's Chat</a>
                     </li>
                 </ul>
-                <div class="header__container-nav__btn" >
-                    <a class="header__container-nav__btn-button">
-                        Coming Soon
-                    </a>
+                <div class="header__container-nav__btn">
+                    <a class="header__container-nav__btn-button" href="/panel.html">App</a>
                 </div>
             </nav>
         </div>
