change URL to go to marketplace

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -97,7 +97,7 @@
                     </li>
                 </ul>
                 <div class="header__container-nav__btn">
-                    <a class="header__container-nav__btn-button" href="/panel.html">App</a>
+                    <a class="header__container-nav__btn-button" href="https://app.p2pcloud.io/">App</a>
                 </div>
             </nav>
         </div>
