--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,7 +11,7 @@
                         <p class="hero__container-content__info-icon"><img src="./design/img/lock.svg" alt="lock">Secure</p>
                         <p class="hero__container-content__info-icon"><img src="./design/img/decentralized.svg" alt="eye">Decentralized</p>
                     </div>
-                    <a class="btn-gradient" href="/docs/developer-hub/developer-quick-start/">Get started</a>
+                    <a class="btn-gradient" href="https://app.p2pcloud.io/">Get started</a>
                 </div>
                 <div class="hero__container-content__img">
                     <img src="./design/img/hero.png" alt="hero">
