disabled autoplay and recommendations

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -42,7 +42,7 @@
             <h2 class="seconds__container-title">P2P Cloud <span class="text-gradient">in 60 seconds</span></h2>
 
 
-            <iframe class="seconds__container-video" src="https://www.youtube.com/embed/iJrVOTX2jC4?autoplay=1">
+            <iframe class="seconds__container-video" src="https://www.youtube.com/embed/iJrVOTX2jC4?autoplay=0&rel=0">
             </iframe>
         </div>
     </section>
