--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -96,7 +96,7 @@
                             href="https://calendly.com/germany-p2pcloud/30min" target="_blank">Let's Chat</a>
                     </li>
                 </ul>
-                {{ partial "dropdown.html" (dict "menuID" "test" "name" "Menuname" "width" "auto" "page" .) }}
+                {{ partial "dropdown.html" (dict "menuID" "test" "name" "Menuname" "page" .) }}
                 <div class="header__container-nav__btn">
                     <a class="header__container-nav__btn-button" href="https://app.p2pcloud.io/">App</a>
                 </div>
