--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -96,6 +96,15 @@
                             href="https://calendly.com/germany-p2pcloud/30min" target="_blank">Let's Chat</a>
                     </li>
                 </ul>
+                <div class="dropdown">
+                    <button class="dropdown-button">Products &#x25BE;</button>
+                    <div class="dropdown-content">
+                      <a href="#">Dedicated RPC(coming soon)</a>
+                      <a href="#" target="_blank">Object Storage(coming soon)</a>
+                      <a href="https://humilis.my.canva.site/rpc-router" target="_blank">RPC Router</a>
+                      <a href="https://humilis.my.canva.site/vm" target="_blank">Virtual Machines</a>
+                    </div>
+                  </div>
                 <div class="header__container-nav__btn">
                     <a class="header__container-nav__btn-button" href="https://app.p2pcloud.io/">App</a>
                 </div>
@@ -165,7 +174,6 @@
                                 </path>
                             </svg>
                         </a>
-
                     </div>
                 </div>
             </div>
