--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,15 +4,25 @@
         <div class="container hero__container">
             <div class="hero__container-main">
                 <div class="hero__container-content">
-                    <h4 class="unique__container-title">Empower Your Web3 Journey with <span class="text-gradient"> Comprehensive </span> Cloud Solutions</h4>
+                    <h1 class="values__container-title">Empower Your Web3 Project: Cloud Solutions at<span class="text-gradient"> Half the Cost </span>, no Contracts.</h1>
                     <p class="values__container-cards__body">Your Partner in Innovation and Efficiency</p>
-                    <a class="btn-gradient" href="https://app.p2pcloud.io/">Get started</a>
+                    <a class="btn-gradient" href="#products">Choose Product</a>
                 </div>
                 <div class="hero__container-content__img">
                     <img src="./design/img/hero.png" alt="hero">
                 </div>
             </div>
-            <div class="hero__container-article">
+            <div class="container unique__container unique-section">
+                <h2 class="unique__container-title">What Makes P2P Cloud <span class="text-gradient">Unique</span></h2>
+                <div class="unique__container-content">
+                    <img src="./design/img/unique.png" alt="unique">
+                    <div class="unique__container-content__text">
+                        <h4 class="unique__container-content__text-title"> We <span class="text-gradient">Revolutionized</span> web3 Cloud Tooling</h4>
+                            <h3> We were able to accomplish this by reimagining cloud infrastructure: less failure points, more savings, and built-in security from the ground up.</h3>
+                    </div>
+                </div>
+            </div>
+            <!--<div class="hero__container-article">
                 <div class="hero__container-article-img">
                     <img src="./design/img/com.svg" alt="com">
                 </div>
@@ -28,27 +38,11 @@
                 <div class="hero__container-article__img">
                     <img src="./design/img/bg-grid.png" alt="grid">
                 </div>
-            </div>
+            </div>-->
         </div>
     </section>
-    <section class="unique">
-        <div class="container unique__container">
-            <h2 class="unique__container-title">What Makes P2P Cloud <span class="text-gradient">Unique</span></h2>
-            <div class="unique__container-content">
-                <img src="./design/img/unique.png" alt="unique">
-                <div class="unique__container-content__text">
-                    <h4 class="unique__container-content__text-title"> We are <span class="text-gradient">Revolutionizing</span> Cloud Services for Web3 and Beyond</h4>
-                        <h3> Our suite of services, 
-                        including AI Model Training, VMs, storage, and Dedicated RPC, is designed to streamline your operations, ensuring you stay ahead in the fast-paced digital 
-                        world.</h3>
-                 
-                </div>
-            </div>
-        </div>
-    </section>
-
     <section class="values">
-        <div class="container values__container">
+        <div class="container values__container" id="products">
             <h2 class="values__container-title">Our <span class="text-gradient"> Products</span></h2>
             <div class="values__container-cards">
                 <div class="values__container-cards__card">
@@ -57,9 +51,15 @@
                     </div>
                     <div class="values__container-cards__body">
                         <p>Vm's and Compute</p>
-                        <p>Access high-performance virtual machines tailored to meet the dynamic 
-                            demands of your applications. Whether for small-scale projects or large-scale 
-                            deployments, our VMs come with an SLA,  zero contracts and can scale on demand.</p>
+                        <p>Access high-performance virtual machines tailored to meet the 
+                            demands of your applications with zero contracts or hidden fees.</p>
+                            <div class="changing__container-content__btn">
+                                <button class="btn-gradient"> 
+                                    <a href="https://humilis.my.canva.site/vm" target="_blank">
+                                        Book a VM Today
+                                    </a>
+                                </button>
+                            </div>
                     </div>
                 </div>
                 <div class="values__container-cards__card">
@@ -68,9 +68,13 @@
                     </div>
                     <div class="values__container-cards__body">
                         <p>Storage</p>
-                        <p>Keep your data safe and accessible with our secure storage options. 
-                            Designed for efficiency and reliability, our storage solutions ensure 
-                            that your data is always available when needed.</p>
+                        <p> Designed for efficiency and reliability, our storage solutions ensure 
+                            that your data is always available when needed for only a fraction of the cost.</p>
+                    </div>
+                    <div class="changing__container-content__btn">
+                        <button class="btn-gradient"> 
+                            Coming Soon
+                        </button>
                     </div>
                 </div>
                 <div class="values__container-cards__card">
@@ -80,8 +84,14 @@
                     <div class="values__container-cards__body">
                         <p>RPC Router</p>
                         <p>Connect to any blockchain networks with ease using our RPC router. 
-                            choose between low latency connection or secure APIs, making your blockchain 
-                            interactions smoother and more reliable.</p>
+                            Choose between low latency connection or secure APIs.</p>
+                    </div>
+                    <div class="changing__container-content__btn">
+                        <button class="btn-gradient"> 
+                            <a href="https://humilis.my.canva.site/rpc-router" target="_blank">
+                                Try for Free
+                            </a>
+                        </button>
                     </div>
                 </div>
             </div>
