--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -99,15 +99,15 @@
                 <div class="dropdown">
                     <button class="dropdown-button">Products &#x25BE;</button>
                     <div class="dropdown-content">
-                      <a href="#">Dedicated RPC(coming soon)</a>
-                      <a href="#" target="_blank">Object Storage(coming soon)</a>
-                      <a href="https://humilis.my.canva.site/rpc-router" target="_blank">RPC Router</a>
+                      <a href="#products">Dedicated RPC</a>
+                      <a href="#" target="_blank">Object Storage<br>(coming soon)</a>
+                      <a href="https://p2pcloud.io/rpcrouter" target="_blank">RPC Router</a>
                       <a href="https://humilis.my.canva.site/vm" target="_blank">Virtual Machines</a>
                     </div>
                   </div>
-                <div class="header__container-nav__btn">
+                <!--<div class="header__container-nav__btn">
                     <a class="header__container-nav__btn-button" href="https://app.p2pcloud.io/">App</a>
-                </div>
+                </div>-->
             </nav>
         </div>
     </header>
