--- a/layouts/index.html
+++ b/layouts/index.html
@@ -18,7 +18,7 @@
                     <img src="./design/img/unique.png" alt="unique">
                     <div class="unique__container-content__text">
                         <h4 class="unique__container-content__text-title"> We <span class="text-gradient">Revolutionized</span> web3 Cloud Tooling</h4>
-                            <h3> We were able to accomplish this by reimagining cloud infrastructure: less failure points, more savings, and built-in security from the ground up.</h3>
+                            <h3> We were able to accomplish this by remaking cloud infrastructure: less failure points, more savings, and built-in security from the ground up.</h3>
                     </div>
                 </div>
             </div>
@@ -47,7 +47,7 @@
             <div class="values__container-cards">
                 <div class="values__container-cards__card">
                     <div class="values__container-cards__img">
-                        <img src="./design/img/money-card.svg" alt="money">
+                        <img src="./design/img/server.png" alt="vm" style= "width: 80px; height: 80px;">
                     </div>
                     <div class="values__container-cards__body">
                         <p>Vm's and Compute</p>
@@ -56,7 +56,7 @@
                             <div class="changing__container-content__btn">
                                 <button class="btn-gradient"> 
                                     <a href="https://humilis.my.canva.site/vm" target="_blank">
-                                        Book a VM Today
+                                        Book a VM
                                     </a>
                                 </button>
                             </div>
@@ -64,16 +64,17 @@
                 </div>
                 <div class="values__container-cards__card">
                     <div class="values__container-cards__img">
-                        <img src="./design/img/lock-card.svg" alt="lock">
+                        <img src="./design/img/com.png" alt="server" style="width: 80px; height: 80px;">
                     </div>
                     <div class="values__container-cards__body">
-                        <p>Storage</p>
-                        <p> Designed for efficiency and reliability, our storage solutions ensure 
-                            that your data is always available when needed for only a fraction of the cost.</p>
+                        <p>Dedicated RPC</p>
+                        <p> We support blockchains like: Ethereum, Polygon, Binance, Arbitrum, Avalanche and more!
+                            No more contracts and most importantly, an expensive bill. 
+                        </p>
                     </div>
                     <div class="changing__container-content__btn">
                         <button class="btn-gradient"> 
-                            Coming Soon
+                            <a href="https://meetwithwallet.xyz/germany/p2p-cloud-dedicated-nodes" target="_blank"> Contact us</a>
                         </button>
                     </div>
                 </div>
