--- a/layouts/index.html
+++ b/layouts/index.html
@@ -89,7 +89,7 @@
                     </div>
                     <div class="changing__container-content__btn">
                         <button class="btn-gradient"> 
-                            <a href="https://humilis.my.canva.site/rpc-router" target="_blank">
+                            <a href="https://rpcrouter.com/" target="_blank">
                                 Try for Free
                             </a>
                         </button>
